# tether-qvac-solace

./: .dockerignore  .env.example  .gitignore  BUILD_BRIEF.md  CLAUDE.md  CONTRIBUTING.md  DEMO_VIDEO_SCRIPT.md  Dockerfile  HARDWARE.md  PSY_MODELS.md  README.md  SUBMISSION.md  SUBMISSION_FORM_FIELDS.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: architecture-diagram.txt
logs/: README.md
python/: README.md  pyproject.toml
python/examples/: 01_local_chat.py  02_local_rag_vault.py  03_translation.py  04_ocr.py  05_privacy_dashboard.py
python/src/qvac/: __init__.py  client.py  config.py  ocr.py  rag.py  telemetry.py  translate.py  types.py
python/src/qvac/backends/: __init__.py  base.py  openai_compat.py  stub.py
python/tests/: test_qvac_client.py
scripts/: demo.sh
src/: agent.ts  cli.ts  models.ts  qvac-mock.ts  qvac-real.ts  router.ts  server.ts  telemetry.ts  tools.ts  types.ts
tests/: agent.test.ts  router.test.ts  telemetry.test.ts  test_smoke.ts  tools.test.ts
